--- a/color change.html
+++ b/color change.html
@@ -135,12 +135,13 @@ color: black;
 </div>
  <iframe width="270" height="151.875" src="https://thothub.lol/embed/1453894" frameborder="0" allowfullscreen></iframe>
  <iframe width="270" height="151.875" src="https://thothub.lol/embed/1052453" frameborder="0" allowfullscreen></iframe>
-<img src="A.png">
+<img src="A.png"></img>
 
 
 
 </body>
 
 </html>
+
 
 
